--- a/style.css
+++ b/style.css
@@ -52,7 +52,8 @@ body {
     width: 300px;
     height: 300px;
     border-radius: 50%;
-    margin-left:50px;
+    margin-left: 50px;
+    margin-top: 183px;
     margin-block-end: 10px;
     background-color: rgb(6, 241, 65);
     border: 15px solid grey
@@ -76,8 +77,9 @@ body {
     width: 300px;
     border: 10px dashed;
     border-color: red;
-    margin-left:25px;
-    margin-bottom: 120px;
+    margin-left: 66px;
+    margin-bottom: 39px;
+    margin-top: 112px;
     color: tomato;
     text-align: center;
     text-decoration: underline;
